--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "react/display-name": "off",
         "react/no-unescaped-entities": "off",
         "react/prop-types": "off",
-        "react/no-unknown-property": "off"
+        "react/no-unknown-property": "off",
+        "no-unused-vars":["warn"]
     }
 }
